# Mail-Sync

.tmp.driveupload/: 1003  1007  1015  1019  1023  1027  1031  1035  1039  1045  1049  1063  1067  1071  1075  1079  1083  1087  1095  1099  1103  1107  1111  1115  1117  1121  1123  1127  1131  1139  1147  1151  1155  1163  1169  1173  1181  1185  1189  1193  (+637 more)
mail-sync-0.0.1/backend/: Dockerfile  main.py  pyproject.toml
mail-sync-0.0.1/backend/src/authentication/: enums.py  models.py  routes.py  service.py
mail-sync-0.0.1/backend/src/common/: base_repository.py  models.py  remap_exception.py
mail-sync-0.0.1/backend/src/common/exceptions/: database.py
mail-sync-0.0.1/backend/src/google/: google_api_client.py  google_oath.py  models.py
mail-sync-0.0.1/backend/src/link_mail_address/: models.py  repositories.py  routes.py  service.py
mail-sync-0.0.1/backend/src/logger/: asgi_access_log.py
mail-sync-0.0.1/backend/tests/example_module/: test_service.py
mail-sync-0.0.1/frontend/: .eslintrc.js  package-lock.json  package.json
mail-sync-0.0.2/: .gitignore  docker-compose.dev.yml
mail-sync-0.0.2/backend/: .gitignore  Makefile  main.py
mail-sync-0.0.2/frontend/: .gitignore  Dockerfile.dev  package-lock.json  package.json
mail-sync-0.0.3/: Makefile  docker-compose.dev.yml
mail-sync-0.0.3/backend/: .env.example  Dockerfile  main.py  setup.cfg
mail-sync-0.0.3/frontend/: .prettierrc.json  package-lock.json  package.json
mail-sync-0.0.3/worker/: .air.conf  Dockerfile.dev  go.mod  go.sum
mail-sync-master/: Makefile  docker-compose.dev.yml
(+162 files in other folders)
